# ETF-Regime-Shift-KANs

./: .gitattributes  .gitignore  Data Cleaning and Fill.ipynb  README.dev.md  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
data/raw/google_trends/google_trends/: trend_ARK_Invest.csv  trend_China_trade_war.csv  trend_OPEC_cut.csv  trend_SPAC.csv  trend_bank_run.csv  trend_bond_yield.csv  trend_inflation.csv  trend_interest_rates.csv  trend_quantitative_tightening.csv  trend_stock_market_crash.csv  trend_supply_chain_disruption.csv  trend_tech_layoffs.csv
google_trends/: trend_AI_stocks.csv  trend_ECB_meeting.csv  trend_market_volatility.csv  trend_recession.csv  trend_semiconductor_shortage.csv  trend_stock_bubble.csv
scripts/: push.ps1  reorg.ps1  run_train.ps1  setup.ps1
src/etf_kan/: __init__.py  utils.py
src/etf_kan/data/: __init__.py  fundflow.py
src/etf_kan/models/: __init__.py  kan_model.py
src/etf_kan/training/: train.py
tests/: test_imports.py
